--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 
   <div class="wrapper">
 
-      <div id="line" class="d3-chart"></div>
+      <div id="linechart" class="d3-chart"></div>
 
 
   </div>
