--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="css/styles.min.css">
 
 <script src="js/library/d3.v5.min.js"></script>
-<script src="js/library/d3-tip.js"></script>
+<!-- <script src="js/library/d3-tip.js"></script> -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 
