--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
          <h3>Breakdown of Most Recent Jobless Claims By State</h3>
          <table id="datatable"></table>
          <h6>SOURCE: U.S. Department of Labor; Bureau of Labor Statistics</h6>
+         <h6>NOTE: States with asterisks have only provided estimates.</h6>
       </div>
 
 
